<resources>
    <string name="app_name">Connect Four</string>
    <string name="start_puzzle">Start Game</string>
    <string name="main_menu">Back to Main Menu</string>
    <string name="surrender">Surrender</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome to Connect 4</string>
    <string name="winner">\ Won!\n</string>
    <string name="loser">\ Lost :(</string>
    <string name="restart">Restart</string>
    <string name="invalid_move">Invalid Move</string>
    <string name="tile_error">There is no tile currently placed</string>
    <string name="player_one">Player 1:</string>
    <string name="player_two">Player 2:</string>
    <string name="turn_indicator">\'s Turn</string>
    <string name="default_green">Green</string>
    <string name="default_white">White</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="remember">Remember</string>

</resources>